Thu Jun 16 20:06:15 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/testunit/test_parallel.rb: Fix Regexp for test.

	* test/testunit/tests_for_parallel/test_third.rb: Use
	  Test::Unit::TestCase#on_parallel_worker? for detecting worker.

	* lib/test/unit/testcase.rb(Test::Unit::TestCase#on_parallel_worker?):
	  New Method Test::Unit::TestCase#on_parallel_worker? returns true
	  when a testcase is running on parallel worker.
	* lib/test/unit/parallel.rb(Test::Unit::TestCase#on_parallel_worker?):
	  ditto.

Thu Jun 16 19:27:12 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* test/test_securerandom.rb: Add testcase.  This testcase does NOT aim
	  to test cryptographically strongness and randomness.  It includes
	  the test for PID recycle issue of OpenSSL described in #4579 but
	  it's disabled by default.

Thu Jun 16 17:55:07 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_io.rb (TestIO#test_copy_stream_socket): fix
	  test hanging up issue. Patch by CHIKANAGA Tomoyuki.

Thu Jun 16 15:17:39 2011  Eric Hodel  <drbrain@segment7.net>

	* variable.c (const_missing):  Add simple example of const_missing.
	  Patch by Anuj Dutta.  [Ruby 1.9 - Bug #4794]

Thu Jun 16 15:09:29 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/monitor.rb:  Improve documentation.  Patch by Sandor Szucs.
	  [Ruby 1.9 - Bug #4823]

Thu Jun 16 14:54:09 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/webrick/utils.rb: Document WEBrick::Utils.  Patch by Olivier
	  Brisse.  [Ruby 1.9 - Bug #4819]

Thu Jun 16 14:26:46 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/webrick/httpservlet/erbhandler.rb:  Allow the ERB document to
	  alter the content-type of the response.  [Ruby 1.9 - Bug #4685]

Thu Jun 16 14:15:47 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/timeout.rb: Clarify timeout duration types.  Patch by Alf Mikula.
	  [Ruby 1.9 - Bug #4791]
	* lib/net/http.rb: ditto

Thu Jun 16 13:25:25 2011  Eric Hodel  <drbrain@segment7.net>
